# IPOPT-Helper

./: CMakeLists.txt  README.md  setup.py
src/: ellipsoidAndLogSumExp.cpp  ellipsoidAndLogSumExp.hpp  pybind.cpp  test.cpp
